--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "vercel-build": "npm rebuild sharp && npm run build"
   },
   "dependencies": {
     "apexcharts": "^4.1.0",
@@ -16,7 +17,8 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.6.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
