--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "vercel-build": "npm rebuild sharp && npm run build"
+    "vercel-build": "npm rebuild sharp && npm run build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "apexcharts": "^4.1.0",
     "framer-motion": "^11.12.0",
+    "jwt-decode": "^4.0.0",
     "motion": "^11.12.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
