--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "vercel-build": "npm rebuild sharp && npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "@table-library/react-table-library": "^4.1.7",
     "apexcharts": "^4.1.0",
     "framer-motion": "^11.12.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "motion": "^11.12.0",
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.6.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -25,6 +30,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
