--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^11.0.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5"
   },
